Adds prettier and eslint support.

--- a/assets/style-overrides.css
+++ b/assets/style-overrides.css
@@ -1,4 +1,6 @@
-::-webkit-scrollbar { display: none; }
+::-webkit-scrollbar {
+  display: none;
+}
 
 /*Hide 'Open in iTunes' link*/
 .web-navigation .web-navigation__native-upsell {
